# sdk-outreach-single-tenant

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
examples/: basic_usage.py
sdk_outreach/: __init__.py  client.py  config.py  exceptions.py  models.py
